--- a/src/app/component/profile-user/profile-user.component.html
+++ b/src/app/component/profile-user/profile-user.component.html
@@ -56,7 +56,7 @@
                             <td>{{ ef.phone }}</td>
                             <td>
                                 <button mat-icon-button>
-                                  <mat-icon (click)="editFamilyDialog()">edit</mat-icon>
+                                  <!-- <mat-icon (click)="editFamilyDialog()">edit</mat-icon> -->
                                 </button>
                             </td>
                         </tr>
