--- a/src/app/component/employee-role/dialog-delete-employee-role.html
+++ b/src/app/component/employee-role/dialog-delete-employee-role.html
@@ -1,9 +1,9 @@
-<!-- <div style="width: 30vw; padding: 1em">
+<div style="width: 30vw; padding: 1em">
     <h1 mat-dialog-title>Are you sure to delete?</h1>
     <form>
         <div mat-dialog-actions>
             <button mat-button mat-dialog-close color="warn">Cancel</button>
-            <button type="submit" mat-raised-button color="warn" (click)="deleteAttendanceType()">Delete</button>
+            <button type="submit" mat-raised-button color="warn" (click)="deleteRoleType()">Delete</button>
         </div>
     </form>
-</div> -->
+</div>
