--- a/src/app/component/employee-role/dialog-edit-employee-role.html
+++ b/src/app/component/employee-role/dialog-edit-employee-role.html
@@ -4,15 +4,15 @@
         <div mat-dialog-content>
             <div>
                 <mat-form-field class="example-full-width" appearance="outline" style="width: 100%;">
-                    <mat-label>Input Attendance Type Name</mat-label>
-                    <input type="text" aria-label="Name" matInput required [(ngModel)]="bankType.name" [formControl]="name" name="name">
+                    <mat-label>Input Role Type</mat-label>
+                    <input type="text" aria-label="Name" matInput required [(ngModel)]="roleType.name" [formControl]="name" name="name">
                     <mat-error>{{ getErrorMessage()}}</mat-error>
                 </mat-form-field>
             </div>
         </div>
         <div mat-dialog-actions>
             <button mat-button mat-dialog-close color="warn">Cancel</button>
-            <button type="submit" mat-raised-button color="primary" (click)="updateBankType()">Update</button>
+            <button type="submit" mat-raised-button color="primary" (click)="updateRoleType()">Update</button>
         </div>
     </form>
 </div>
