--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <div>
     <h1 class="mat-h1" style="font-weight: 500;">Dashboard</h1>
-    <div style="display: flex; align-items: center; margin-left: 20px;">
+    <!-- <div style="display: flex; align-items: center; margin-left: 20px;">
         <h3 style="margin: 0;">Welcome</h3>
         <span style="margin-left: 5px; font-size: 24px; font-weight: 400;">Admin!</span>
-    </div>
+    </div> -->
     <div fxLayout="row wrap" fxLayoutGap="16px grid" style="padding-top: 10px;">
         <div fxFlex="25%" fxFlex.sm="50%">
             <mat-card style="display: flex; flex-direction: row; align-items: center; height: 86px;">
