completed update profile

--- a/src/app/component/employee-detail/dialog-personal-info-employee.html
+++ b/src/app/component/employee-detail/dialog-personal-info-employee.html
@@ -21,7 +21,7 @@
             </mat-radio-button>
         </mat-radio-group>
 
-        <mat-form-field appearance="outline" style="width: 100%;" style="margin-top: 14px">
+        <mat-form-field appearance="outline" style="width: 100%;margin-top: 14px">
             <mat-label>DateOfBirth</mat-label>
             <input matInput [matDatepicker]="datepicker" name="dateofbirth" [(ngModel)]="dateOfBirth" required>
             <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
