add attendance table

--- a/src/app/dashboard-user/dashboard-user.component.css
+++ b/src/app/dashboard-user/dashboard-user.component.css
@@ -24,3 +24,8 @@ h1,
 h3 {
     margin: 0;
 }
+
+.mat-raised-button.mat-button-disabled:not([class*=mat-elevation-z]) {
+    color: #ffffff !important;
+    background-color: rgb(214, 214, 214) !important;
+}
