--- a/src/app/navigation-user/navigation-user.component.html
+++ b/src/app/navigation-user/navigation-user.component.html
@@ -70,7 +70,7 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <mat-toolbar style="background-color: #204290; color: white; position: sticky; top: 0; z-index: 999; display: flex; justify-content: space-between; align-items: center;">
+        <mat-toolbar style="background: linear-gradient(to right, #144aa8 0%, #00c5fb 100%); color: white; position: sticky; top: 0; z-index: 999; display: flex; justify-content: space-between; align-items: center;">
             <div style="display: flex; align-items: center; flex-direction: row">
                 <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" (click)="rotate = !rotate">
                 <!--ngIf="isHandset$ | async"  close when big-->
