--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,9 @@ a:hover {
     padding-left: 20px !important;
     font-weight: bold;
 }
+
+
+/* .mat-form-field-appearance-outline .mat-form-field-flex {
+    background-color: #fafafa !important;
+    border-radius: 5px;
+} */
