--- a/src/app/component/attendance-admin/attendance-admin.component.html
+++ b/src/app/component/attendance-admin/attendance-admin.component.html
@@ -1,1 +1,94 @@
-<p>attendance-admin works!</p>
+<div style="overflow-y: hidden;">
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mat-h1" style="font-weight: 500;">Attendance</h1>
+    </div>
+    <div style=" display: flex; flex-direction: row">
+        <a routerLink="/">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Attendance </h4>
+    </div>
+</div>
+<mat-card style="margin-bottom: 20px;">
+    <mat-form-field appearance="outline" style="margin: 0 1%">
+        <mat-label>Search Employee name</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Seach id, name...." #input>
+    </mat-form-field>
+    <mat-form-field background-color="#fafafa" appearance="outline" style="margin: 0 1%">
+        <mat-label>Select Month</mat-label>
+        <mat-select>
+            <mat-option value="option">Jan</mat-option>
+            <mat-option value="option">Feb</mat-option>
+            <mat-option value="option">Mar</mat-option>
+            <mat-option value="option">Apr</mat-option>
+            <mat-option value="option">May</mat-option>
+            <mat-option value="option">Jun</mat-option>
+            <mat-option value="option">Jul</mat-option>
+            <mat-option value="option">Aug</mat-option>
+            <mat-option value="option">Sep</mat-option>
+            <mat-option value="option">Oct</mat-option>
+            <mat-option value="option">Nov</mat-option>
+            <mat-option value="option">Dec</mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field class="example-full-width" appearance="outline" style="margin: 0 1%">
+        <mat-label>Select Year</mat-label>
+        <mat-select>
+            <mat-option value="option">2022</mat-option>
+            <mat-option value="option">2021</mat-option>
+            <mat-option value="option">2020</mat-option>
+            <mat-option value="option">2019</mat-option>
+            <mat-option value="option">2018</mat-option>
+        </mat-select>
+    </mat-form-field>
+</mat-card>
+<div>
+    <div style="overflow: auto;" class="mat-elevation-z8 clendar-container">
+        <table mat-table [dataSource]="dataSource" matSort style="padding-right: 10px;">
+
+            <!-- ID Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef> ID </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.name}} ABBHJABAHBHABHJABHJABFHBFABW </td>
+            </ng-container>
+
+            <!-- Progress Column -->
+            <ng-container matColumnDef="total">
+                <th mat-header-cell *matHeaderCellDef> Total Workday </th>
+                <td mat-cell *matCellDef="let row">{{ row.progress}} / {{ attendanceColumns.length }} </td>
+            </ng-container>
+
+            <!-- Fruit Column -->
+            <ng-container *ngFor="let attend of attendanceColumns; index as i" matColumnDef="{{ attend }}">
+                <th mat-header-cell *matHeaderCellDef> {{ i+1 }}
+                    <div>{{ days[i] }}</div>
+                </th>
+                <td mat-cell *matCellDef="let row">
+                    <ng-container *ngIf="days[i] == 'Sun' || days[i] == 'Sat'; else elseTemplate">
+                        <i class="fas fa-circle" style="font-size: 7px; color: rgb(144, 149, 153);"></i>
+                    </ng-container>
+                    <ng-template #elseTemplate>
+                        <i class="fas fa-check-circle" style="color: rgb(51, 209, 16);"></i>
+                        <!-- <i class="fas fa-times-circle" style="color: rgb(255, 21, 21);"></i> -->
+                    </ng-template>
+                </td>
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+    </div>
+    <mat-paginator class="mat-elevation-z8" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
