--- a/src/app/component/attendance-admin/attendance-admin.component.html
+++ b/src/app/component/attendance-admin/attendance-admin.component.html
@@ -75,7 +75,8 @@
                     </ng-container>
                     <ng-template #elseTemplate>
                         <i class="fas fa-check-circle" style="color: rgb(51, 209, 16);"></i>
-                        <!-- <i class="fas fa-times-circle" style="color: rgb(255, 21, 21);"></i> -->
+                        <!-- <i class="fas fa-times-circle" style="color: rgb(247, 85, 70);"></i> -->
+                        <!-- <i class="fas fa-alarm-exclamation" style="color: rgb(240, 179, 24);"></i> -->
                     </ng-template>
                 </td>
             </ng-container>
