--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -60,6 +60,12 @@
                             <h3>Attendance</h3>
                         </a>
                     </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.6rem 10px 16px" routerLink="/report/leave" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Leave</h3>
+                        </a>
+                    </mat-list-item>
                 </div>
             </mat-list>
             <mat-list style="padding: 0;">
