--- a/src/app/dashboard-user/dashboard-user.component.html
+++ b/src/app/dashboard-user/dashboard-user.component.html
@@ -1,7 +1,17 @@
 <div>
-    <h1 class="mat-h1">Dashboard</h1>
+    <div style="overflow-y: hidden;">
+        <div style="display: flex; justify-content: space-between;">
+            <h1 class="mat-h1" style="font-weight: 500;">Attendance</h1>
+        </div>
+        <div style=" display: flex; flex-direction: row">
+            <a routerLink="/account/dashboard">
+                <h4>Dashboard</h4>
+            </a>
+            <h4 style="margin-left: 3px;">/ dashboard</h4>
+        </div>
+    </div>
 
-    <mat-card style="height: auto; margin: 15px;">
+    <mat-card style="height: auto; margin: 15px 0;">
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <div style="margin-top: 10px; font-size: 16px;">Welcome <span style="margin-left: 5px;" class="mat-h2">{{ user_name }}!</span></div>
             <div style="display: flex; justify-content: center; align-items: center">
@@ -34,7 +44,7 @@
     </mat-card>
     <div style="display: flex; flex-direction: row;">
         <div style="width: 50%;">
-            <mat-card style="height: auto; margin: 15px;">
+            <mat-card style="height: auto; margin: 15px 0;">
                 <div style="display: flex; align-items: center; flex-direction: row; border-bottom: 1px solid black;  margin-bottom: 10px;">
                     <mat-card-content style="margin: 0;">
                         <img width="60px" height="60px" style="border-radius: 60px;" src="https://th.bing.com/th/id/OIP.9nyTpzPgpvxBs2vYCYxytgHaG0?pid=ImgDet&rs=1" alt="#">
@@ -59,7 +69,7 @@
                     </div>
                 </div>
             </mat-card>
-            <mat-card style="height: 250px; margin: 15px;">
+            <mat-card style="height: 250px; margin: 15px 0;">
                 <mat-card-header>
                     <h3 style="font-weight: 500;">Notices</h3>
                 </mat-card-header>
