--- a/src/app/component/Reports/employee-report/employee-report.component.html
+++ b/src/app/component/Reports/employee-report/employee-report.component.html
@@ -2,15 +2,11 @@
     <div style="display: flex; justify-content: space-between;">
         <h1 class="mat-h1" style="font-weight: 500;">Reports</h1>
         <div>
-
-            <button mat-button (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted})"
-                style=" color: #F89926">
-                <i class="far fa-file-export" style="transform: rotate(-180deg);"></i>
-                Export CSV
-            </button>
-            <button mat-raised-button color="primary">
-                <i class="far fa-file-import"></i>
-                Import CSV
+            <button mat-raised-button
+                (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted, columnWidths: [10,20,20,20,20,20,20,40,80]})"
+                style="background-color: #F89926; color: #fff; margin-right: 30px">
+                <i class="fa-solid fa-down-to-line"></i>
+                Download Excel
             </button>
         </div>
 
@@ -23,56 +19,81 @@
     </div>
 </div>
 <div style="padding: 2em;">
-    <mat-form-field class="example-full-width" appearance="outline" style="margin:1%">
-        <mat-label>Search Employee name</mat-label>
-        <input matInput>
 
-    </mat-form-field>
+
     <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Choose Department</mat-label>
-        <mat-select>
-            <mat-option value="option">PHP</mat-option>
-            <mat-option value="option">JAVA</mat-option>
-            <mat-option value="option">HR</mat-option>
-        </mat-select>
-
+        <mat-label>Search Name</mat-label>
+        <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
+            [matAutocomplete]="auto" (keyup)="applyFilter($event)" #input>
+        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                {{option}}
+            </mat-option>
+        </mat-autocomplete>
     </mat-form-field>
 
-    <div class="mat-elevation-z2">
-        <table mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" style="width: 100%;">
 
+    <div class="mat-elevation-z2" style="font-size: 10px; overflow-x: scroll;">
+        <table mat-table matTableExporter #exporter="matTableExporter" mat-table [dataSource]="dataSource"
+            class="mat-elevation-z4 table__section" matSort style="width: 90vw; ">
             <!-- Position Column -->
-            <ng-container matColumnDef="position">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+                <td mat-cell *matCellDef="let element">{{element.id}}</td>
             </ng-container>
 
-            <!-- Leave Type Column -->
+            <!-- Name Column -->
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> LeaveType </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Full Name</th>
+                <td mat-cell *matCellDef="let element">{{element.firstName + " " + element.lastName}}</td>
+            </ng-container>
+
+            <!-- Email Column -->
+            <ng-container matColumnDef="dateOfBirth.date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>DateOfBirth</th>
+                <td mat-cell *matCellDef="let element">{{element.dateOfBirth.date |date: "yyyy-MM-dd" }}</td>
             </ng-container>
 
             <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> From </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
+                <td mat-cell *matCellDef="let element">{{element.position}}</td>
             </ng-container>
 
             <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> To </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <ng-container matColumnDef="department">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Department</th>
+                <td mat-cell *matCellDef="let element">{{element.department }}</td>
+            </ng-container>
+            <ng-container matColumnDef="phone">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
+                <td mat-cell *matCellDef="let element">{{element.phone}}</td>
+            </ng-container>
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+                <td mat-cell *matCellDef="let element">{{element.email}}</td>
+            </ng-container>
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+                <td mat-cell *matCellDef="let element">{{element.address}}</td>
+            </ng-container>
+            <ng-container matColumnDef="joinDate.date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Joined Date</th>
+                <td mat-cell *matCellDef="let element">{{element.joinDate.date | date: "yyyy-MM-dd"}}</td>
             </ng-container>
 
+            <tr mat-header-row *matHeaderRowDef="displayedColumns">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
 
+            </tr>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-            aria-label="Select page of periodic elements">
-        </mat-paginator>
     </div>
-</div>
+    <mat-paginator style="background-color: #fafafa;" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+        aria-label="Select page of periodic elements">
+    </mat-paginator>
