--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -23,9 +23,10 @@
                     <div style="font-size: 1.2em">{{ total_leave }}</div>
                 </div>
                 <div>
-                    <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
-                    <mat-icon style="transform: scale(1.4);">people</mat-icon>
-                </button>
+                    <button style="width: 5em;height:5em;" mat-fab color="primary"
+                        aria-label="Example icon button with a delete icon">
+                        <mat-icon style="transform: scale(1.4);">people</mat-icon>
+                    </button>
                 </div>
             </mat-card>
         </div>
@@ -36,9 +37,10 @@
                     <div style="font-size: 1.2em">02</div>
                 </div>
                 <div>
-                    <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
-                    <mat-icon style="transform: scale(1.4);">apps</mat-icon>
-                </button>
+                    <button style="width: 5em;height:5em;" mat-fab color="primary"
+                        aria-label="Example icon button with a delete icon">
+                        <mat-icon style="transform: scale(1.4);">apps</mat-icon>
+                    </button>
                 </div>
             </mat-card>
         </div>
@@ -49,9 +51,10 @@
                     <div style="font-size: 1.2em">02</div>
                 </div>
                 <div>
-                    <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
-                    <mat-icon style="transform: scale(1.4);">explorer</mat-icon>
-                </button>
+                    <button style="width: 5em;height:5em;" mat-fab color="primary"
+                        aria-label="Example icon button with a delete icon">
+                        <mat-icon style="transform: scale(1.4);">explorer</mat-icon>
+                    </button>
                 </div>
             </mat-card>
         </div>
@@ -118,7 +121,8 @@
             <td mat-cell *matCellDef="let element">
                 <mat-icon color="primary">remove_red_eye</mat-icon>
                 <mat-icon color="primary" (click)="openEditDialog(element.id)">edit</mat-icon>
-                <mat-icon style="margin-left: 5px;" color="warn" (click)="openDeleteDialog(element.id)">delete</mat-icon>
+                <mat-icon style="margin-left: 5px;" color="warn" (click)="openDeleteDialog(element.id)">delete
+                </mat-icon>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns">
@@ -128,6 +132,7 @@
         </tr>
 
     </table>
-    <mat-paginator style="background-color: #fafafa; margin: -25px 0 30px 0; " [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    <mat-paginator style="background-color: #fafafa; margin: -25px 0 30px 0; " [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons aria-label="Select page of periodic elements">
     </mat-paginator>
 </div>
