--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -57,53 +57,74 @@
         </div>
     </div>
 
+    <mat-card style="margin: 20px 0 30px 0;">
+        <mat-card-title>
+            <div class="mat-h2">Requests Awaiting Approval</div>
+        </mat-card-title>
+        <mat-card-content>
+            <mat-card *ngFor="let leave of pending_leaves; let indexOfelement = index;" class="mat-elevation-z2" style="display: flex; justify-content: space-between; align-items: center; margin: 5px 0;">
+                <div style="display: flex; flex-direction: row; align-items: center;">
+                    <img width="55px" height="55px" style="border-radius: 55px; border: 2px solid orange;" src="{{ leave.imageURL ? leave.imageURL : '/assets/images/profile_user.png' }}" alt="#">
+                    <div style="padding-left: 10px;">
+                        <h3 style="margin: 0;">{{ leave.firstName + " " + leave.lastName}}</h3>
+                        <div>Requested {{ leave.leave_reason }} from {{ leave.start.date | date: "dd MMM yyyy" }} to {{ leave.end.date | date: "dd MMM yyyy" }} ({{ total_leave_day[indexOfelement] }} working day)</div>
+                    </div>
+                </div>
+                <div>
+                    <button (click)="openAcceptDialog(leave.id)" (click)="disableAcc = !disableAcc" [ngClass]="{'disable': disableAcc }" mat-raised-button style="margin-right: 10px; background-color: rgba(0, 201, 137, 0.8); color: white; font-weight: 500;"><i class="fas fa-check-circle"></i> Approve</button>
+                    <button (click)="openDeclineDialog(leave.id)" (click)="disable = !disable" [ngClass]="{'disable': disable}" mat-raised-button style="color: white; background-color: rgb(247, 85, 70); font-weight: 500;"><i class="fas fa-times-circle"></i> Decline</button>
+                </div>
+            </mat-card>
+            <div *ngIf="pending_leaves == ''" style="margin-left: 20px; color: orange">No request</div>
+        </mat-card-content>
+    </mat-card>
+
     <!--Table section-->
-    <div style="margin-top: 1em; margin-bottom: -1em;">
-        <h3>Latest Leave Application</h3>
-    </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section" matSort>
+    <div class="mat-h2" style="margin-top: 1em; margin-bottom: 1em;">Latest Leave Application</div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z4 table__section" matSort>
         <!-- Position Column -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>No</th>
-            <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="employee">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
-            <td mat-cell *matCellDef="let element">{{element.firstName + " " + element.lastName}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.firstName + " " + element.lastName }}</td>
         </ng-container>
 
         <!-- Email Column -->
         <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-            <td mat-cell *matCellDef="let element">{{element.email}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
         </ng-container>
 
         <!-- Weight Column -->
         <ng-container matColumnDef="leave_reason">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Leave Type</th>
-            <td mat-cell *matCellDef="let element">{{element.leave_reason}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.leave_reason }}</td>
         </ng-container>
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="start.date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Start From</th>
-            <td mat-cell *matCellDef="let element">{{element.start.date | date: "yyyy-MM-dd"}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.start.date | date: "yyyy-MM-dd" }}</td>
         </ng-container>
         <ng-container matColumnDef="end.date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
-            <td mat-cell *matCellDef="let element">{{element.end.date | date: "yyyy-MM-dd"}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.end.date | date: "yyyy-MM-dd" }}</td>
         </ng-container>
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-            <td mat-cell *matCellDef="let element">{{element.description ?? "No description"}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.description ?? "No description" }}</td>
         </ng-container>
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+            <th mat-header-cell *matHeaderCellDef>Status</th>
             <td mat-cell *matCellDef="let element">
-                <div>Pending</div>
-
+                <button *ngIf="element.status == 'Approved'" mat-raised-button style="border-radius: 25px; background-color: rgba(0, 201, 137, 0.8); color: white; font-weight: 500;">{{ element.status }}</button>
+                <button *ngIf="element.status == 'Pending'" mat-raised-button style="border-radius: 25px; background-color: rgb(240, 179, 24); color: white; font-weight: 500;">{{ element.status }}</button>
+                <button *ngIf="element.status == 'Declined'" mat-raised-button style="border-radius: 25px; color: white; background-color: rgb(247, 85, 70); font-weight: 500;">{{ element.status }}</button>
             </td>
         </ng-container>
         <!-- <ng-container matColumnDef="duration">
@@ -128,6 +149,6 @@
         </tr>
 
     </table>
-    <mat-paginator style="background-color: #fafafa; margin: -25px 0 30px 0; " [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    <mat-paginator style="background-color: #fafafa !important; margin: -25px 0 30px 0; " [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
     </mat-paginator>
 </div>
