--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -134,7 +134,7 @@
                         </a>
                     </mat-list-item>
                     <mat-list-item>
-                        <a style="margin: -16px; padding: 10px 1.25rem 10px 16px;" routerLink="/employee/detail/1" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a style="margin: -16px; padding: 10px 1.25rem 10px 16px;" routerLink="/employee/detail/{{ user_id }}" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
                             <h3>Update profile</h3>
                         </a>
@@ -145,7 +145,7 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <mat-toolbar style="background-color: #204290; color: white; position: sticky; top: 0; z-index: 999; display: flex; justify-content: space-between; align-items: center;">
+        <mat-toolbar style="background: linear-gradient(to right, #144aa8 0%, #00c5fb 100%); color: white; position: sticky; top: 0; z-index: 999; display: flex; justify-content: space-between; align-items: center;">
             <div style="display: flex; align-items: center; flex-direction: row">
                 <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" (click)="rotate = !rotate">
                 <!--ngIf="isHandset$ | async"  close when big-->
@@ -158,12 +158,12 @@
                     <button mat-button [matMenuTriggerFor]="menu" style="height: 66px;">
                       <!-- <mat-icon>account_circle</mat-icon> -->
                       <div style="display: flex; align-items: center">
-                        <img height="30px" width="30px" style="border: 2px solid #F89926; border-radius: 30px;" src="https://th.bing.com/th/id/OIP.GlXqxcR9EmviN5kuwaUsMQHaIB?pid=ImgDet&rs=1" alt="#">
-                        <h6 style="margin-left: 10px;">Admin</h6>
+                        <img height="30px" width="30px" style="border: 2px solid #F89926; border-radius: 30px;" src="{{ imageURL ? imageURL : '/assets/images/profile_user.png' }}" alt="#">
+                        <h6 style="margin-left: 10px;">{{  user_name }}</h6>
                       </div>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item routerLink="/employee/detail/1">My profile</button>
+                        <button mat-menu-item routerLink="/employee/detail/{{ user_id }}">My profile</button>
                         <button mat-menu-item routerLink="/change password">Setting</button>
                         <button mat-menu-item (click)="logout()">Logout</button>
                     </mat-menu>
